k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeolmu-market
  namespace: yeolmu
spec:
  type: NodePort
  selector:
    app: yeolmu-market
  ports:
    - name: http
      port: 80
      targetPort: 8080
